test/semantics/programs/invalid/noncomparable-types1.guav
# Should fail since relational expression has incomparable types

d = 4.1 >= true
